fix closed mobile nav covering screen

--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,13 @@ body {
 
 .closed-menu {
   opacity: 0;
-  transform: translateX(-150);
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  transition: opacity 0.3s ease;
   display: block;
+  pointer-events: none;
 }
 
 .open-menu {
-  transform: translateX(0);
-  transition: opacity 0.7s ease, transform 0.01s ease;
+  transition: opacity 0.7s ease;
   height: auto;
   background-image: url('./assets/logo-grey.svg');
   background-repeat: no-repeat;
